--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -1,6 +1,8 @@
 :root {
   --ups-brown: #351C15;
   --ups-gold: #ffc400;
-  
-  font-family: Roboto, Tahoma, helvetica, arial, sans-serif;
+
+  background-color: rgb(248, 248, 248);
+
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
